# kindling

./: .buildinfo  .gitignore  README.html  README.md  _toc.yml  dodo.py  genindex.html  noxfile.py  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: doc.yml  release.yml  test.yml
_sources/: README.md
docs/: _config.yml  test_kindling.html  test_kindling.ipynb
src/kindling/: __init__.py  __main__.py  dodo.py  noxfile.py  sanitize.cfg
