[metadata]
name = kindling
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = 
author_email = 
keywords = 

[options]
install_requires =
    pydantic
    doit
package_dir = 
	=src
packages = find:

[options.extras_require]
doc = 
	jupyter-book
test = 
	pytest
	nbval

